Fix chrome results overflow bug

--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -58,7 +58,7 @@
     margin-left: 10px;
     margin-right: 10px;
   }
-  max-height: 100%;
+  max-height: 100vh;
   max-width: 100%;
 }
 
